# DE-Assessment

./: .gitignore  Makefile  README.md  docker-compose.db.yml  docker-compose.etl.yml  pyproject.toml
.devcontainer/: requirements.txt
.environment/: .env
.output/: dim_body.csv  dim_make.csv  dim_model.csv  dim_seller.csv  dim_transmission.csv  dim_trim.csv  dim_year.csv
dags/: pipeline.py
data/: car_prices copy.csv
environment/: .env  kaggle.json
logs/scheduler/: latest
src/: 00_setup_db.py  01 _ingest.py  01_ingest.py  02_transform.py  config_db.py  config_path.py  ingest.py
