[tool.poetry]
name = "de-assessment"
version = "0.1.0"
description = ""
authors = ["Maverick Wong <mvrck.wong@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
kaggle = "^1.6.17"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
